[package]
name = "rustystack-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.3.2"
dioxus-web = "0.3.2"
im-rc = "15.1.0"
rustystack-common = {git = "https://github.com/gohermgo/rustystack-common"}
# yew = "0.19.3"
# yew-router = "0.16.0"
# wasm-logger = "0.2.0"
# log = "0.4.14"
web-sys = "0.3.56"
# pulldown-cmark = "0.9.1"
# reqwasm = "0.4.0"
# serde = { version = "1.0.133", features = ["derive"] }
